--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -7,10 +7,15 @@
 
 <body>
 <h1>Detail of person:</h1>
-<div>TODO: implement show details </div>
 
-<a href=""> edit </a><br>
-<a href=""> delete </a><br>
+Id: <h4 th:text="${person.id}"> <b>10 </b></h4>
+Name: <h4 th:text="${person.firstName}"> John </h4>
+Surname: <h4 th:text="${person.lastName}"> Smith </h4>
+
+<hr>
+
+<a href="edit?id=10" th:href="@{show(id=${person.id})}"> Edit Person </a><br>
+<a href="delete?id=10" th:href="@{delete(id=${person.id})}"> Delete Person </a><br><br>
 <a href="list"> Show the list </a>
 
 </body>
